縦方向のサイズ設定ができたもの(暫定処置)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-my-text></app-my-text>
+<div class="col-sm-10" style="height: 100%; padding: 0px;">
 <app-leaflet-test></app-leaflet-test>
+</div>
+<div class="col-sm-2">
+<app-my-text></app-my-text>
+</div>
