--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <div class="col-sm-10" style="height: 100%; padding: 0px;">
 <!-- <app-leaflet-test></app-leaflet-test> -->
-<leaflet-map [option]="mapOption" (leafletClick)="onClick($event)" (leafletDblClick)="onDblClick($event)"></leaflet-map>
+<leaflet-map [option]="mapOption" (leafletClick)="onClick($event)" (leafletDblClick)="onDblClick($event)">
+<leaflet-tile></leaflet-tile>
+</leaflet-map>
 </div>
 <div class="col-sm-2">
+<!--  
 <app-my-text></app-my-text>
+ -->
 </div>
