Squashed commit of the following:
commit 57c839e73ecaf1fce28c15c5dc4498afd1e0b31b
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Tue Jan 10 12:50:01 2017 +0900

    暫定コード一部削除

commit 6c192bd9d7f3c6b24f840f9d6f8b3284a2a67ad5
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Tue Jan 10 12:38:18 2017 +0900

    タイルレイヤ追加

commit fdbaa74dd05207c27f2f90985ca5125d53ea7fd5
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Tue Jan 10 12:36:20 2017 +0900

    タイルレイヤを分離

commit 434124699614eaa4a4f7663ee96972714173f628
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Tue Jan 10 00:41:16 2017 +0900

    マウスイベントに対応

commit 3a8dec2ad756e2c662b9d5ca226294c820143ccf
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Mon Jan 9 23:36:15 2017 +0900

    オプションを外部から指定できるよう修正

commit 1de886efa01fe54d2b73577a8dbd3806441eee5c
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Mon Jan 9 21:44:45 2017 +0900

    Leafletを完全にWrapしないことにしたので、Service削除

    TypescriptとAngular2に関する知識が不足しているため、今はLeafletをインポートして使うことを必須とする。

commit 25db554a9287730c426ad4cb377a2fc862f6d27e
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Mon Jan 9 19:03:18 2017 +0900

    Leaflet関連のコンポーネントをモジュール化

commit 31bde9a0a7e2d6a2a1ebfa5adc9c44623183e420
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Mon Jan 9 18:23:07 2017 +0900

    コンポーネント化できたので一時保存

commit 3ddd6f7c927cd5e5a9d7fe2f2c3b8d2090abe3d5
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Mon Jan 9 17:13:45 2017 +0900

    コンポーネント化の準備(初期状態)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="col-sm-10" style="height: 100%; padding: 0px;">
-<app-leaflet-test></app-leaflet-test>
+	<leaflet-map [option]="mapOption" (leafletClick)="onClick($event)" (leafletDblClick)="onDblClick($event)">
+  	<leaflet-tile [tileUrl]="tileUrl" [option]="tileOption"></leaflet-tile>
+	</leaflet-map>
 </div>
+
 <div class="col-sm-2">
-<app-my-text></app-my-text>
+  <app-my-text></app-my-text>
 </div>
