--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <div class="col-sm-10" style="height: 100%; padding: 0px;">
 	<leaflet-map [option]="mapOption" (leafletClick)="onClick($event)" (leafletDblClick)="onDblClick($event)">
     <leaflet-tile [tileUrl]="tileUrl" [option]="tileOption"></leaflet-tile>
-    <leaflet-marker [latlng]="[0,0]" ></leaflet-marker>
+    <leaflet-marker [(latlng)]="pos"></leaflet-marker>
 	</leaflet-map>
 </div>
 
 <div class="col-sm-2">
   <app-my-text></app-my-text>
+  <p>{{ pos }}</p>
 </div>
