--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,7 @@
 <div class="col-sm-10" style="height: 100%; padding: 0px;">
-	<leaflet-map [option]="mapOption" (leafletClick)="onClick($event)" (leafletDblClick)="onDblClick($event)">
-    <leaflet-tile [tileUrl]="tileUrl" [option]="tileOption"></leaflet-tile>
-    <leaflet-marker [(latlng)]="pos"></leaflet-marker>
-	</leaflet-map>
+  <app-leaflet-test></app-leaflet-test>
 </div>
 
 <div class="col-sm-2">
   <app-my-text></app-my-text>
-  <p>{{ pos }}</p>
 </div>
