--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <div class="col-sm-10" style="height: 100%; padding: 0px;">
-	<leaflet-map [option]="mapOption" (leafletClick)="onClick($event)" (leafletDblClick)="onDblClick($event)">
-  	<leaflet-tile [tileUrl]="tileUrl" [option]="tileOption"></leaflet-tile>
-	</leaflet-map>
+  <app-leaflet-test></app-leaflet-test>
 </div>
 
 <div class="col-sm-2">
