--- a/src/app/basic/leaflet-test/leaflet-test.component.html
+++ b/src/app/basic/leaflet-test/leaflet-test.component.html
@@ -1,5 +1,8 @@
-<leaflet-map [option]="mapOption" (leafletClick)="onClick($event)" (leafletDblClick)="onDblClick($event)">
+<leaflet-map [option]="mapOption" (leafletClick)="onMapClick($event)">
   <leaflet-tile [tileUrl]="tileUrl" [option]="tileOption"></leaflet-tile>
   <!-- work around : https://github.com/angular/angular/issues/8602 -->
-  <leaflet-marker [option]="markerOption" *ngFor="let mk of markers; let i = index" [(latlng)]="markers[i]" (leafletDragEnd)="updateMarker(i)"></leaflet-marker>
+  <!-- observable に代入できないので、latlng は入力のみ可能。 -->
+  <leaflet-marker [option]="markerOption"
+                  [latlng]="mk" *ngFor="let mk of markerObserver | async"
+                  (leafletClick)="onMarkerClick(mk.$key)"></leaflet-marker>
 </leaflet-map>
