Squashed commit of the following:
commit 4b63226d43c8b337ebbd2c7163810a06cc8441ec
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Thu Jan 12 01:29:34 2017 +0900

    複数マーカを追加・削除できるお試し版

commit 421fa67c0d2f460c53a053a08f3756aa8bcb7e92
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Tue Jan 10 23:21:03 2017 +0900

    一時保存

--- a/src/app/basic/leaflet-test/leaflet-test.component.html
+++ b/src/app/basic/leaflet-test/leaflet-test.component.html
@@ -1,4 +1,8 @@
-<leaflet-map [option]="mapOption" (leafletClick)="onClick($event)" (leafletDblClick)="onDblClick($event)">
+<leaflet-map [option]="mapOption" (leafletClick)="onMapClick($event)">
   <leaflet-tile [tileUrl]="tileUrl" [option]="tileOption"></leaflet-tile>
-  <leaflet-marker [(latlng)]="markerLatlng"></leaflet-marker>
+  <!-- work around : https://github.com/angular/angular/issues/8602 -->
+  <!-- observable に代入できないので、latlng は入力のみ可能。 -->
+  <leaflet-marker [option]="markerOption"
+                  [latlng]="mk" *ngFor="let mk of markerObserver | async"
+                  (leafletClick)="onMarkerClick(mk.$key)"></leaflet-marker>
 </leaflet-map>
