--- a/src/app/basic/leaflet-test/leaflet-test.component.html
+++ b/src/app/basic/leaflet-test/leaflet-test.component.html
@@ -1,8 +1,7 @@
 <leaflet-map [option]="mapOption" (leafletClick)="onMapClick($event)">
   <leaflet-tile [tileUrl]="tileUrl" [option]="tileOption"></leaflet-tile>
   <!-- work around : https://github.com/angular/angular/issues/8602 -->
-  <!-- observable に代入できないので、latlng は入力のみ可能。 -->
   <leaflet-marker [option]="markerOption"
-                  [latlng]="mk" *ngFor="let mk of markerObserver | async"
+                  [latlng]="mk" *ngFor="let mk of markerObserver | async; trackBy:trackByFnc;"
                   (leafletClick)="onMarkerClick(mk.$key)"></leaflet-marker>
 </leaflet-map>
