--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="col-sm-2">
-  <app-info></app-info>
+  <map-selector></map-selector>
 </div>
 <div class="col-sm-10" style="height: 100%; padding: 0px;">
   <app-leaflet-test></app-leaflet-test>
