--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="col-sm-2">
-  <map-selector></map-selector>
+	<div class="row">
+	    <app-map-selector [(selectedContinent)]="selectedContinent"></app-map-selector>
+	</div>
 </div>
 <div class="col-sm-10" style="height: 100%; padding: 0px;">
   <app-leaflet-test></app-leaflet-test>
