--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="col-sm-2">
 	<div class="row">
-	    <app-map-selector [(selectedContinent)]="selectedContinent"></app-map-selector>
+	    <app-continent-selector [(selectedContinent)]="selectedContinent"></app-continent-selector>
 	</div>
 </div>
 <div class="col-sm-10" style="height: 100%; padding: 0px;">
