--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
 	</div>
 </div>
 <div class="col-sm-10" style="height: 100%; padding: 0px;">
-  <app-leaflet-test></app-leaflet-test>
+  <app-leaflet-test [tileUrl]="selectedContinent.url"></app-leaflet-test>
 </div>
