--- a/src/app/ui/continent-selector/continent-selector.component.html
+++ b/src/app/ui/continent-selector/continent-selector.component.html
@@ -1,4 +1,4 @@
-<div class="panel" [ngClass]="(isActive===true) ? 'panel-primary' : 'panel-info' ">
+<div class="panel" [ngClass]="(isActive===true) ? 'panel-info' : 'panel-primary' ">
   <div class="panel-heading"
        (click)="toggleActivation()">
     <span class="glyphicon"
