ルータ導入

--- a/src/app/basic/my-text/my-text.component.html
+++ b/src/app/basic/my-text/my-text.component.html
@@ -1,3 +1,4 @@
+<div class ="container">
 <div class="row">
 	<h2>Message</h2>
   <div class="form-group">
@@ -18,4 +19,5 @@
 	    <button class="btn btn-default" type="button" (click)="deleteMessage( msg.$key )">delete</button>
 	  </span>
 	</div>
+</div>
 </div>
