--- a/src/app/basic/map-viewer/map-viewer.component.html
+++ b/src/app/basic/map-viewer/map-viewer.component.html
@@ -2,6 +2,7 @@
   <div class="row">
       <app-continent-selector [(selectedContinent)]="selectedContinent"
                               (selectedContinentChange)="onContinentChange($event)"></app-continent-selector>
+      <app-user-admin></app-user-admin>
   </div>
 </div>
 <div class="col-sm-10" style="height: 100%; padding: 0px;">
