--- a/src/app/ui/map-viewer/map-viewer.component.html
+++ b/src/app/ui/map-viewer/map-viewer.component.html
@@ -6,5 +6,5 @@
   </div>
 </div>
 <div class="col-sm-10" style="height: 100%; padding: 0px;">
-  <app-leaflet-test [selectedContinent]="selectedContinent"></app-leaflet-test>
+  <app-main-map [selectedContinent]="selectedContinent"></app-main-map>
 </div>
