--- a/src/app/experiment/uac-service/uac-service.component.html
+++ b/src/app/experiment/uac-service/uac-service.component.html
@@ -1,4 +1,23 @@
-<div class="col-sm-12">
-	<div class="panel panel-default">
-	</div>
+ <div class="col-sm-2">
+  <div class="panel panel-info">
+    <div class="panel-heading">Login Test</div>
+    <div class="panel-body">
+      <ul class="list-group">
+        <li *ngIf="!isAuthenticated" class="list-group-item active" (click)="loginWithGoogle()">Login</li>
+        <li *ngIf="isAuthenticated" class="list-group-item active" (click)="logout()">Logout</li>
+      </ul>
+      <span *ngIf="isAuthenticated">User: {{ user }}</span>
+    </div>
+  </div>
+</div>
+<div class="col-sm-10">
+    <div class="panel-body">
+      <ul class="list-group">
+        <li class="list-group-item active" (click)="createUserProfile()">uid: {{uid}}</li>
+      </ul>
+    <div class="panel-body">
+      <ul class="list-group">
+        <li class="list-group-item active" *ngFor="let food of foodObserver | async">{{food.$key}} : {{food.$value}}</li>
+      </ul>
+    </div>
 </div>
